# game-of-life

./: Cargo.toml  README.md
src/: data.rs  helpers.rs  lib.rs  main.rs
